tests/baselines/reference/iteratorSpreadInArray6.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray6.ts(15,14): error TS2345: Argument of type 'symbol[]' is not assignable to parameter of type 'number | ConcatArray<number>'.
  Type 'symbol[]' is not assignable to type 'ConcatArray<number>'.
    Types of property 'slice' are incompatible.
      Type '(start?: number, end?: number) => symbol[]' is not assignable to type '(start?: number, end?: number) => number[]'.
        Type 'symbol[]' is not assignable to type 'number[]'.
          Type 'symbol' is not assignable to type 'number'.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray6.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array: number[] = [0, 1];
    array.concat([...new SymbolIterator]);
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'symbol[]' is not assignable to parameter of type 'number | ConcatArray<number>'.
!!! error TS2345:   Type 'symbol[]' is not assignable to type 'ConcatArray<number>'.
!!! error TS2345:     Types of property 'slice' are incompatible.
!!! error TS2345:       Type '(start?: number, end?: number) => symbol[]' is not assignable to type '(start?: number, end?: number) => number[]'.
!!! error TS2345:         Type 'symbol[]' is not assignable to type 'number[]'.
!!! error TS2345:           Type 'symbol' is not assignable to type 'number'.